receive all buffers rust side

--- a/candle-wasm-examples/moshi_asr/Cargo.toml
+++ b/candle-wasm-examples/moshi_asr/Cargo.toml
@@ -51,6 +51,6 @@ features = [
   'Performance',
 ]
 
-[[bin]]
-name = "stt_standalone"
-path = "src/stt_standalone.rs"
+#[[bin]]
+#name = "stt_standalone"
+#path = "src/stt_standalone.rs"
