--- a/candle-wasm-examples/moshi_asr/Cargo.toml
+++ b/candle-wasm-examples/moshi_asr/Cargo.toml
@@ -14,6 +14,8 @@ candle-nn = { workspace = true }
 candle-transformers = { workspace = true }
 num-traits = { workspace = true }
 tokenizers = { workspace = true, features = ["unstable_wasm"] }
+moshi = "0.6.1"
+sentencepiece = "0.11.3"
 
 # App crates.
 anyhow = { workspace = true }
